--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ code {
 }
 
 .App-header{
-  background-color: #282c34;
+  background-color: white;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
