--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,20 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  padding: 0;
+  box-sizing: border-box;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
-.App-header{
+.App-header {
   background-color: white;
   display: flex;
   flex-direction: column;
@@ -22,23 +24,97 @@ code {
   color: white;
 }
 
-.nav-links{
+.nav-links {
   display: flex;
   flex-direction: row;
-  justify-content:space-between;
+  justify-content: space-between;
 }
 
-.logo{
- width: 80px;
- height: 60px;
+.logo {
+  width: 80px;
+  height: 60px;
 }
-.buttonsNav{
-  width: 600px;
+.buttonsNav {
+  width: 500px;
+  height: 40px;
   display: flex;
   flex-direction: row;
-  justify-content:space-evenly;
+  justify-content: space-evenly;
 }
 
-.button{
-  background-color: white;
+.divHome {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  max-height: 100vh;
+}
+
+.homeTitle {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50vw;
+  height: 55vh;
+  background-color: black;
+  color: white;
+  text-align: center;
+  border-radius: 0.5em;
+}
+
+.titleText {
+  font-size: 100px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+.intro {
+  flex-direction: column;
+}
+
+.cats {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: center;
+}
+
+.catContainer {
+  position: relative;
+  cursor: pointer;
+}
+
+#catImage {
+  display: block;
+  margin: auto;
+  object-fit: contain;
+}
+
+.moreInfo {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  position: absolute;
+  top: 5%;
+  width: 100%;
+  height: 95%;
+  padding: 20px;
+  box-sizing: border-box;
+  background-color: rgba(0, 0, 0, 0.8);
+  color: white;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  border-radius: 8px;
+  text-align: center;
+}
+.imageContainer {
+  width: 500px;
+  height: 400px;
+  overflow: hidden;
+  border-radius: 0.75em;
+}
+.catContainer:hover #catImage {
+  opacity: 0.5;
+}
+
+.catContainer:hover .moreInfo {
+  opacity: 1;
 }
