--- a/src/index.css
+++ b/src/index.css
@@ -89,6 +89,10 @@ code {
 
 .catContainer {
   position: relative;
+  width: 500px;
+  height: 400px;
+  overflow: hidden;
+  border-radius: 0.75em;
 }
 
 #catImage {
@@ -141,4 +145,56 @@ code {
   color: black;
   font-size: 30px;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
+.pageNav{
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 100px;
+  justify-content: center;
+
+}
+
+.catsTest{
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  gap: 20px;
+  justify-content: space-evenly;
+}
+
+.imageContainer {
+  position: relative;
+}
+
+.hoverOverlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5); 
+  display: none; 
+  justify-content: center;
+  align-items: center;
+}
+
+.imageContainer:hover .hoverOverlay {
+  display: flex; 
+}
+
+.favoritesTitle{
+  display: flex;
+  justify-content: center;
+  height: 200px;
+  align-items: center;
+}
+
+.login{
+  display: flex;
+  justify-content: center;
+  height: 200px;
+  align-items: center;
+  font-size: 20px;
 }
