--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,6 @@
   cursor: url(./images/logo.png), auto;
 }
 
-
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
@@ -29,7 +28,7 @@ code {
 .nav-links {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
 }
 
@@ -98,8 +97,7 @@ code {
 #catImage {
   display: block;
   margin: auto;
-  object-fit: contain;
-
+  object-fit:cover;
 }
 
 .moreInfo {
@@ -119,7 +117,6 @@ code {
   transition: opacity 0.3s ease;
   border-radius: 8px;
   text-align: center;
-
 }
 .imageContainer {
   width: 500px;
@@ -135,28 +132,28 @@ code {
   opacity: 1;
 }
 
-
-.homeTitleAndImage{
+.homeTitleAndImage {
   display: flex;
   flex-direction: row;
 }
 
-.headline{
+.headline {
   color: black;
-  font-size: 30px;
+  font-size: 25px;
+  font-weight: 700;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
-.pageNav{
+.pageNav {
   display: flex;
   flex-direction: row;
+  color: #3c009d;
   width: 100%;
   height: 100px;
   justify-content: center;
-
 }
 
-.catsTest{
+.catsTest {
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
@@ -174,27 +171,65 @@ code {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.5); 
-  display: none; 
+  background: rgba(0, 0, 0, 0.5);
+  display: none;
   justify-content: center;
   align-items: center;
 }
 
 .imageContainer:hover .hoverOverlay {
-  display: flex; 
+  display: flex;
 }
 
-.favoritesTitle{
+.favoritesTitle {
   display: flex;
   justify-content: center;
   height: 200px;
   align-items: center;
 }
 
-.login{
+.login {
   display: flex;
-  justify-content: center;
-  height: 200px;
+  flex-direction: column;
+  margin: auto;
+  margin-top: 200px;
+  padding-bottom: 30px;
+}
+.loginHeader {
+  display: flex;
+  flex-direction: column;
   align-items: center;
-  font-size: 20px;
+  gap: 9px;
+  width: 100%;
+  margin-top: 30px;
+}
+.loginText {
+  color: #3c009d;
+  font-size: 48px;
+  font-weight: 700;
+}
+
+.underline {
+  width: 61px;
+  height: 6px;
+  background: #3c009d;
+  border-radius: 9px;
+}
+
+.inputs {
+  margin-top: 55px;
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+}
+
+.input {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: auto;
+  width: 480px;
+  height: 80px;
+  background: #eaeaea;
+  border-radius: 6px;
 }
